--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "node-fetch": "^3.2.10",
     "webex-node-bot-framework": "^2.3.1"
   }
 }
